# Senior-Design-Sound-System-UCF

./: CMakeLists.txt  README.md  WavStream_and_BLE.cpp  WavStream_and_BLE.h  aoa_audio.c  aoa_audio.h  control_page.dart  eq_histogram.dart  eq_sliders.dart  eq_visualizer.dart  home_page.dart  idf_component.yml  main.c  main.cpp  main.dart  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old  settings_page.dart
main/: CMakeLists.txt  idf_component.yml  main.cpp
main/my_lib/: auto_eq_help.cpp  auto_eq_help.h  config_functions.cpp  config_functions.h  glb_params.cpp  glb_params.h  help_functions.cpp  help_functions.h  my_tasks.cpp  my_tasks.h  my_usb_device.cpp  my_usb_device.h  usb_device.cpp
partition/: EMM6_calibration.txt
